# versioningit_fail

./: pyproject.toml  setup.py
example/: __init__.py  _version.py
