[build-system]
build-backend = "setuptools.build_meta"
requires = [
  "setuptools >= 61.2",
  "versioningit ~= 2.0",
  "wheel",
]

[project]
name = "example"
description = 'Example'
maintainers = [{name = "Bas", email = "bas@nijho.lt"}]
license = {text = "MIT"}
requires-python = ">=3.9"
dynamic = ["version"]
dependencies = [
    "versioningit>=2.0.1",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages]
find = {namespaces = false}

[tool.versioningit]
default-version = "0.0"

[tool.versioningit.format]
dirty = "{version}.dev{distance}+{branch}.{vcs}{rev}.dirty"
distance = "{version}.dev{distance}+{branch}.{vcs}{rev}"
distance-dirty = "{version}.dev{distance}+{branch}.{vcs}{rev}.dirty"

[tool.versioningit.onbuild]
build-file = "example/_version.py"
source-file = "example/_version.py"
